@@ -21,7 +21,7 @@ AC_CONFIG_HEADER([config.h])
 GWENHYFWAR_VERSION_MAJOR=0
 GWENHYFWAR_VERSION_MINOR=9
 GWENHYFWAR_VERSION_PATCHLEVEL=1
-GWENHYFWAR_VERSION_BUILD=5
+GWENHYFWAR_VERSION_BUILD=6
 GWENHYFWAR_VERSION_TAG="cvs"
 GWENHYFWAR_VERSION_FULL_STRING="$GWENHYFWAR_VERSION_MAJOR.$GWENHYFWAR_VERSION_MINOR.$GWENHYFWAR_VERSION_PATCHLEVEL.$GWENHYFWAR_VERSION_BUILD($GWENHYFWAR_VERSION_TAG)"
 GWENHYFWAR_VERSION_STRING="$GWENHYFWAR_VERSION_MAJOR.$GWENHYFWAR_VERSION_MINOR.$GWENHYFWAR_VERSION_PATCHLEVEL($GWENHYFWAR_VERSION_TAG)"
@@ -50,9 +50,9 @@ AC_DEFINE_UNQUOTED(GWENHYFWAR_VERSION_TAG,$GWENHYFWAR_VERSION_TAG, [tag])
 #
 # SO version
 #
-GWENHYFWAR_SO_CURRENT=1
+GWENHYFWAR_SO_CURRENT=2
 GWENHYFWAR_SO_REVISION=0
-GWENHYFWAR_SO_AGE=1
+GWENHYFWAR_SO_AGE=0
 AC_SUBST(GWENHYFWAR_SO_CURRENT)
 AC_SUBST(GWENHYFWAR_SO_REVISION)
 AC_SUBST(GWENHYFWAR_SO_AGE)
