@@ -4,6 +4,7 @@ $Id$
 2003/11/03 Martin Preuss <martin@libchipcard.de>
 ------------------------------------------------
 - fixed a bug in MsgEngine (did not add a trailing 0 to values read)
+- MsgEngine is now able to share definitons with other MsgEngines
 
 
 ===========================================================================
